--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "handlebars": "^4.7.8",
     "mongoose": "^8.14.2",
     "mongoose-paginate-v2": "^1.9.0",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "puppeteer": "^24.10.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
