--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "handlebars": "^4.7.8",
     "mongoose": "^8.14.2",
     "mongoose-paginate-v2": "^1.9.0",
+    "nanoid": "^5.1.5",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "puppeteer": "^24.10.2",
+    "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
